# Open-MPI-examples

./: CMakeLists.txt  README.md  mpi_abort.c  mpi_bcast.c  mpi_comm_rank.c  mpi_isend.c  mpi_send.c
